@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-16-5
+DATE: 01/04/2021
+STAFF: lec
+add some try/except blocks to level1SanityChecks
+
 TAG: littriageload-6-0-16-4
 DATE: 09/09/2020
 STAFF: lec
